--- a/styles/main.css
+++ b/styles/main.css
@@ -7,7 +7,7 @@
 
 body:not(footer) {
   max-width: 100vw;
-  background-color: #fdf9e6;
+  background: #fdf9e6;
 }
 
 h1,
@@ -15,12 +15,19 @@ h2,
 h3 {
   font-family: "Plantagenet Cherokee", Arial, sans-serif;
   padding: 0 0.5rem;
+  color: #5d445d;
 }
 
 p,
 a,
 ul {
   font-family: "Source Sans Pro", sans-serif;
+}
+
+p:not(#temp-wrapper p),
+a,
+ul {
+  color: #00202a;
 }
 
 a:hover {
@@ -85,7 +92,7 @@ h1.z-toggle {
 /* Nav styles */
 .desktop-nav-wrapper {
   display: none;
-  background-color: #a28fb0;
+  background: #a28fb0;
 }
 
 .mobile-nav-wrapper {
@@ -115,7 +122,7 @@ h1.z-toggle {
 }
 
 .mobile-nav-links a {
-  color: #f2f7fc;
+  color: #00202a;
   text-decoration: none;
 }
 
@@ -185,7 +192,7 @@ main {
 }
 
 button:not(button.menu) {
-  background-color: #a28fb0;
+  background: #eed9fc;
   display: block;
   box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 3px;
@@ -197,18 +204,15 @@ button:not(button.menu) {
 }
 
 button {
-  color: #fdf9e6;
+  outline: #545454;
+  color: #545454;
 }
 
 button:not(.menu):hover,
 button:not(.menu):active {
-  background-color: #eed9fc;
+  background: #8f9fb0;
   outline: #a28fb0;
-}
-
-button:not(.menu):hover,
-button:not(.menu):active {
-  color: black;
+  color: #5d445d;
 }
 
 button:hover {
@@ -253,7 +257,7 @@ footer p {
 
   nav.desktop-nav-wrapper a {
     padding: 0 2em;
-    color: #f2f7fc;
+    color: #00202a;
     font-size: 1.25em;
     text-decoration: none;
     font-weight: 600;
